setup for accelerometer on iOS and fixed geolock bug
Added initial code to support accelerometer on iOS.  Porting over as
much code that works as possible from Android side.  Also fixed a bug
where the "geoLock" functionality was running whether the user chose
the option or not.

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -26,6 +26,8 @@ li {
 	border-radius:10px;
 	padding-bottom: 5px;
 	margin-bottom:15px;
+	text-align:justify;
+
 }
 #subtitle {
 	margin-top:-5px;
@@ -47,14 +49,51 @@ li {
 }
 
 .label {
-	padding-right:40px;
-	padding-left:5px;
+	/*padding-right:40px;
+	padding-left:5px;*/
 	color: #247CC1;
+	text-align:center;
 }
 
 #launch {
 	font-size:200%;
 	text-align:center;
 }
+.filler {
+	width:100%;
+    display: inline-block;
+    height:0px;
+}
 
 img { max-width: 100%; }
+
+.androidios img{
+	padding:2px;
+	border:3px solid #80AAC2;
+	/*border:3px solid #8EAF7A;*/
+	border-radius:10px;
+}
+
+
+@media only screen and (max-width: 320px) {
+	body {
+		width:100%;
+		height:100%;
+		background:green;
+	}
+	section {
+		margin-left:5%;
+		margin-right:5%;
+	}
+	li {
+		display:block;
+		margin-left:25%;
+		padding-left:-80px;
+		padding-bottom:10%;
+	}
+	.label {
+		margin-left:0px;
+		padding-right:50px;
+	}
+
+}
